--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
     <h1>Abdulaziz Pardaev</h1>
-      <p>I'm <span class="typed" data-typed-items="Programmer, Developer, Freelancer,Robotic Manager"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Programmer, Developer, Freelancer,Robotic Manager,S.W.A.T. GROUP"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -201,7 +201,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
+              <span class="skill">JavaScript <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -411,9 +411,7 @@
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
-          </div>
-
-        </div>
+      
 
       </div>
     </section><!-- End Portfolio Section -->
@@ -457,11 +455,11 @@
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
+                  <label for="name">Abdulaziz Pardaev</label>
                   <input type="text" name="name" class="form-control" id="name" required>
                 </div>
                 <div class="form-group col-md-6">
-                  <label for="name">Your Email</label>
+                  <label for="name">abduprogrammer77@gmail.com</label>
                   <input type="email" class="form-control" name="email" id="email" required>
                 </div>
               </div>
